Flip matcap doesn't work in workbench rendered display mode #65012

Closed
opened 2019-05-23 04:38:27 +02:00 by Massimiliano Puliero · 19 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94

Blender Version
Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-22 17:52, hash: 8fdbd1377e

Short description of error

Flip matcap option in workbench mode doesn't work.

Thank you

flip.PNG

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94 **Blender Version** Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-22 17:52, hash: `8fdbd1377e` **Short description of error** Flip matcap option in workbench mode doesn't work. Thank you ![flip.PNG](https://archive.blender.org/developer/F7062510/flip.PNG)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#76362 was marked as duplicate of this issue

#76362 was marked as duplicate of this issue

Added subscriber: @Alphyn

Added subscriber: @Alphyn

I think, this issue needs clarification.
First of all, flipping the matcap in the viewport works. (by using the icon in the top right of the viewport).
What you captured in the screenshot is the render settings in the right sidebar (the properties bar). To see those settings in effect you need to press F12 to render out an image.

How to reproduce:

  • Switch the render engine to workbench.
  • Change the viewport display method to Render preview.
  • Select a matcap in the render settings of the properties bar.
  • Try flipping the matcap in the render settings with the double arrow icon **<- This does't affect anything in the viewport, **even though it affects the F12 render.
I think, this issue needs clarification. First of all, flipping the matcap in the viewport works. (by using the icon in the top right of the viewport). What you captured in the screenshot is the `render settings` in the right sidebar (the properties bar). To see those settings in effect you need to press F12 to render out an image. **How to reproduce:** - Switch the render engine to workbench. - Change the viewport display method to *Render preview*. - Select a matcap in the render settings of the properties bar. - Try flipping the matcap in the render settings with the double arrow icon **<- This does't affect anything in the viewport, **even though it affects the F12 render.
Brecht Van Lommel changed title from flip matcap doesn't work to Flip matcap doesn't work in workbench rendered display mode 2019-05-29 02:10:41 +02:00

This comment was removed by @Alphyn

*This comment was removed by @Alphyn*
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

Added subscriber: @rjg

Added subscriber: @rjg

toggle_matcap_flip in [view3d_header.c ]] implements the matcap flipping for both the 3D view and the rendering/scene. The issue seems to be that the dependency graph isn't updated, which is why workbench_private_data_init in [ https:*developer.blender.org/diffusion/B/browse/master/source/blender/draw/engines/workbench/workbench_data.c | workbench_data.c still gets the old value, despite being set by toggle_matcap_flip .

Adding a DEG_id_tag_update to the scene case, updates the rendered view when flipping the matcap direction.

`toggle_matcap_flip` in [view3d_header.c ]] implements the matcap flipping for both the 3D view and the rendering/scene. The issue seems to be that the dependency graph isn't updated, which is why `workbench_private_data_init` in [[ https:*developer.blender.org/diffusion/B/browse/master/source/blender/draw/engines/workbench/workbench_data.c | workbench_data.c ](https:*developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_view3d/view3d_header.c) still gets the old value, despite being set by `toggle_matcap_flip` . Adding a `DEG_id_tag_update` to the scene case, updates the rendered view when flipping the matcap direction.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Shouldnt this be solved already? a6dd22d431

Shouldnt this be solved already? a6dd22d431
Member

In #65012#925989, @lichtwerk wrote:
Shouldnt this be solved already? a6dd22d431

ah, see it now [still fails in workbench engine rendered mode...]

> In #65012#925989, @lichtwerk wrote: > Shouldnt this be solved already? a6dd22d431 ah, see it now [still fails in workbench engine rendered mode...]
Member

@rjg : ID_RECALC_BASE_FLAGS seems enough [the less impact, the better -- but cannot give you an exact reason...]

shouldnt it also reference the scene in the notifier? (not that it really makes a difference here...)
P1374: T65012_snippet



diff --git a/source/blender/editors/space_view3d/view3d_header.c b/source/blender/editors/space_view3d/view3d_header.c
index 119ba059a70..e38f7755041 100644
--- a/source/blender/editors/space_view3d/view3d_header.c
+++ b/source/blender/editors/space_view3d/view3d_header.c
@@ -77,7 +77,8 @@ static int toggle_matcap_flip(bContext *C, wmOperator *UNUSED(op))
   else {
     Scene *scene = CTX_data_scene(C);
     scene->display.shading.flag ^= V3D_SHADING_MATCAP_FLIP_X;
-    WM_event_add_notifier(C, NC_SCENE | NA_EDITED, v3d);
+    WM_event_add_notifier(C, NC_SCENE | NA_EDITED, scene);
+    DEG_id_tag_update(&scene->id, ID_RECALC_BASE_FLAGS);
   }
 
   return OPERATOR_FINISHED;
@rjg : `ID_RECALC_BASE_FLAGS` seems enough [the less impact, the better -- but cannot give you an exact reason...] shouldnt it also reference the `scene` in the notifier? (not that it really makes a difference here...) [P1374: T65012_snippet](https://archive.blender.org/developer/P1374.txt) ``` diff --git a/source/blender/editors/space_view3d/view3d_header.c b/source/blender/editors/space_view3d/view3d_header.c index 119ba059a70..e38f7755041 100644 --- a/source/blender/editors/space_view3d/view3d_header.c +++ b/source/blender/editors/space_view3d/view3d_header.c @@ -77,7 +77,8 @@ static int toggle_matcap_flip(bContext *C, wmOperator *UNUSED(op)) else { Scene *scene = CTX_data_scene(C); scene->display.shading.flag ^= V3D_SHADING_MATCAP_FLIP_X; - WM_event_add_notifier(C, NC_SCENE | NA_EDITED, v3d); + WM_event_add_notifier(C, NC_SCENE | NA_EDITED, scene); + DEG_id_tag_update(&scene->id, ID_RECALC_BASE_FLAGS); } return OPERATOR_FINISHED; ```

Added subscriber: @Sergey

Added subscriber: @Sergey

@lichtwerk I've used ID_RECALC_BASE_FLAGS in my test as well and it worked fine. However, since I'm not an expert on depsgraph questions I've asked @Sergey about this on blender.chat. I didn't want to post a diff without understanding how it works and whether it's the correct approach to fix the issue.

shouldnt it also reference the scene in the notifier?

That's what I thought, but it didn't seem to make a difference.

@lichtwerk I've used `ID_RECALC_BASE_FLAGS` in my test as well and it worked fine. However, since I'm not an expert on depsgraph questions I've asked @Sergey about this on blender.chat. I didn't want to post a diff without understanding how it works and whether it's the correct approach to fix the issue. > shouldnt it also reference the scene in the notifier? That's what I thought, but it didn't seem to make a difference.

As for dependency graph I guess any recalc will do it (just need to inform the depsgraph that scene changed). Logically, it is something what affects on shading is changed, so better suit would be ID_RECALC_SHADING.

As for dependency graph I guess any recalc will do it (just need to inform the depsgraph that scene changed). Logically, it is something what affects on shading is changed, so better suit would be `ID_RECALC_SHADING`.
Robert Guetzkow self-assigned this 2020-05-07 15:31:52 +02:00

@Sergey ID_RECALC_SHADING doesn't seem to work though.

@Sergey `ID_RECALC_SHADING` doesn't seem to work though.

This issue was referenced by ce76e17584

This issue was referenced by ce76e17584eea6185170275250b25d9f5b80ad12

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thank you @lichtwerk @rjg and @Sergey for working on this.

Thank you @lichtwerk @rjg and @Sergey for working on this.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65012
No description provided.